Atualização do curso de cabeçalho, footer e variáveis CSS

--- a/estudos-curso-alura/index.html
+++ b/estudos-curso-alura/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="reset.css"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Portfólio</title>
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__links">Home</a>
-            <a class="cabecalho__menu__links">Sobre Mim</a>
+            <a class="cabecalho__menu__links" href="index.html">Home</a>
+            <a class="cabecalho__menu__links" href="about.html">Sobre Mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -27,7 +26,7 @@
                 <a class="apresentacao__texto__botao__links" href="https://github.com/"><i class="fa fa-github titulo-destaque"></i>Github</a>
             </div>
         </section>
-        <img src="imagem.png" alt="Foto de desenvolvedora usando laptop" class="apresentacao__imagem">
+        <img src="assets/imagem.png" alt="Foto de desenvolvedora usando laptop" class="apresentacao__imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alecsander</p>
