--- a/praticando-HTML-CSS/index.html
+++ b/praticando-HTML-CSS/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
-    <h1>Salve</h1>
+    <section class="container principal">
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="./assets/img/Combo.png" alt="O alura combo é a junção do alura+ mais o alura língua">
+        <a href="">Assine por 12x de R$ 120,00*</a>
+        <a href="">Assinar somente o Alura+</a>
+    </section>
 </body>
 </html>
