--- a/praticando-HTML-CSS/index.html
+++ b/praticando-HTML-CSS/index.html
@@ -9,10 +9,78 @@
 </head>
 <body>
     <section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="./assets/img/Combo.png" alt="O alura combo é a junção do alura+ mais o alura língua">
-        <a href="">Assine por 12x de R$ 120,00*</a>
-        <a href="">Assinar somente o Alura+</a>
+        <div class="container__caixa">
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="./assets/img/Combo.png" alt="O alura combo é a junção do alura+ mais o alura língua" class="container__imagem">
+            <a href="" class="container__botao">Assine por 12x de R$ 120,00*</a>
+            <a href="" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+            <p class="container__rodape">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
     </section>
+    <section class="container secundario">
+        <img src="./assets/img/Plataformas.png" alt="Um monitor e celular com o alura plus aberto" class="imagem__secundaria">
+        <div class="">
+            <h2 class="container__titulo__secundario">Assista do seu jeito</h2>
+            <p class="container__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="container__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="" class="container__botao secundario__botao">Assine o Combo+</a>
+        </div>
+        <img src="./assets/img/Telas.png" alt="Tela do alura plus e do alura língua" class="imagem__secundaria">
+    </section>
+    <section class="container secundario">
+        <img src="./assets/img/Notebook.png" alt="Um notebook com um curso alura aberto" class="imagem__secundaria">
+        <div class="">
+            <h2 class="container__titulo__secundario">Baixe seus cursos</h2>
+            <p class="container__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">            
+            <li>
+                <img src="./assets/img/tv.png" alt="Imagem de uma TV">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="./assets/img/computador.png" alt="Imagem de um notebook">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="./assets/img/celular.png" alt="Imagem de um celular e um tablet">
+                <h3 class="lista__item">Celulares e Tablets</h3>
+            </li>
+        </ul>
+    </section>
+    <footer class="rodape">
+        <img src="./assets/img/Logo.png" alt="Logo da alura plus">
+        <ul class="rodape__lista">
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Idioma</a>
+            </li>
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Dispositivos Compatíveis</a>
+            </li>
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Contrato de Assinatura</a>
+            </li>
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Política de Privacidade</a>
+            </li>
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Proteção de Dados no Brasil</a>
+            </li>
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Anúncios Personalizados</a>
+            </li>
+            <li class="rodape__item">
+                <a href="#" class="rodape__item__link">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.<br><br>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
